chnaged images of i.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
            <div class="text"> This is not a real online service! you know you need something like this in your life to help you realise your deepest dreams.
            <br><br>
            
-           sign up now to get started
+           sign up now to get started.
             
            </div>
            Let's do This
