fixed odin image not showing

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <div class="container">
         <div class="pic">
           <div class="logo-cont">
-	  <img src="/images/odin-lined.png" alt="" class="logo">
+	  <img src="Images/odin-lined.png" alt="" class="logo">
             ODIN
           </div>
         </div>
